dist/1.0/bin/sample/retrieveUnpackaged/objects/Component_Pricing_Item__c.object
<CustomObject>
    <description>Data of Pricing Items  related to Components (in specified Bundle).</description>
    <fields>
        <fullName>Binding_Period__c</fullName>
        <description>If binding period matches agreements period, then Pricing Item will be available for selection in Product Configurator (thsi functionality is disabled for SK)</description>
        <inlineHelpText>If binding period matches agreements period, then Pricing Item will be available for selection in Product Configurator (thsi functionality is disabled for SK)</inlineHelpText>
        <label>Binding Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Component_ID__c</fullName>
        <description>Component  Id for which Pricing Item is available</description>
        <inlineHelpText>Component Id for which Pricing Item is available</inlineHelpText>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Component Pricing Items</relationshipLabel>
        <relationshipName>ComponentPricingItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Component_Label_English__c</fullName>
        <description>Related Component&apos;s display label in the language specified.</description>
        <formula>Component_ID__r.Label_Eng__c</formula>
        <inlineHelpText>Related Component&apos;s display label in the language specified.</inlineHelpText>
        <label>Component Label (English)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Label_Hungarian__c</fullName>
        <description>Related Component&apos;s display label in the language specified.</description>
        <formula>Component_ID__r.Label_HUN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Related Component&apos;s display label in the language specified.</inlineHelpText>
        <label>Component Label (Hungarian)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Label_Polish__c</fullName>
        <description>Related Component&apos;s display label in the language specified.</description>
        <formula>Component_ID__r.Label_POL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Related Component&apos;s display label in the language specified.</inlineHelpText>
        <label>Component Label (Polish)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Label_Slovak__c</fullName>
        <description>Related Component&apos;s display label in the language specified.</description>
        <formula>Component_ID__r.Label_SVK__c</formula>
        <inlineHelpText>Related Component&apos;s display label in the language specified.</inlineHelpText>
        <label>Component Label (Slovak)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this item has been created in Billing system (during Bundle synchronization)</description>
        <inlineHelpText>Indicates if this item has been created in Billing system (during Bundle synchronization)</inlineHelpText>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Item_ID__c</fullName>
        <description>Pricing Item Record Id for selected Component</description>
        <inlineHelpText>Pricing Item Record Id for selected Component</inlineHelpText>
        <label>Pricing Item</label>
        <referenceTo>PricingItem__c</referenceTo>
        <relationshipLabel>Component Pricing Items</relationshipLabel>
        <relationshipName>ComponentPricingItems</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pricing_Item_Label_English__c</fullName>
        <description>Related Pricing Item&apos;s display label in the language specified.</description>
        <formula>Pricing_Item_ID__r.Label_Eng__c</formula>
        <inlineHelpText>Related Pricing Item&apos;s display label in the language specified.</inlineHelpText>
        <label>Pricing Item Label (English)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Item_Label_Hungarian__c</fullName>
        <description>Related Pricing Item&apos;s display label in the language specified.</description>
        <formula>Pricing_Item_ID__r.Label_HUN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Related Pricing Item&apos;s display label in the language specified.</inlineHelpText>
        <label>Pricing Item Label (Hungarian)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Item_Label_Polish__c</fullName>
        <description>Related Pricing Item&apos;s display label in the language specified.</description>
        <formula>Pricing_Item_ID__r.Label_POL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Related Pricing Item&apos;s display label in the language specified.</inlineHelpText>
        <label>Pricing Item Label (Polish)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Item_Label_Slovak__c</fullName>
        <description>Related Pricing Item&apos;s display label in the language specified.</description>
        <formula>Pricing_Item_ID__r.Label_SVK__c</formula>
        <inlineHelpText>Related Pricing Item&apos;s display label in the language specified.</inlineHelpText>
        <label>Pricing Item Label (Slovak)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Unique Relationship identifier which can be used for data synchronization between diferent systems</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Relationship identifier which can be used for data synchronization between diferent systems</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this definiton matches a definition in Billing system.</description>
        <inlineHelpText>Indicates if this definiton matches a definition in Billing system.</inlineHelpText>
        <label>Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <label>Component Pricing Item</label>
    <nameField>
        <label>Component Pricing Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Component Pricing Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>